<resources>
    <string name="app_name">FrameDemo</string>
    <string name="text_deafult">null</string>
    <string name="number_deafult">0</string>


    <!--    FragmentTitle   -->
    <string name="home">首页</string>
    <string name="sales_report">销售报表</string>
    <string name="factory_environment">工厂环境</string>
    <string name="toolbar_title">标题</string>

    <!--    MainActivity    -->
    <string name="open_drawer">打开左侧导航栏</string>
    <string name="close_drawer">关闭左侧导航栏</string>

    <!--    sales_report    -->
    <string name="total_car_price">汽车总售价(元)</string>
    <string name="car_price">汽车价格(元)</string>
    <string name="name">名称</string>
    <string name="price">价格</string>
    <string name="time_of_sell">卖出时间</string>
    <string name="quantity_sold">卖出数量</string>


    <!--    factory_environment -->
    <string name="cold_wind">冷风</string>
    <string name="warm_wind">暖风</string>

</resources>
